# julie-ai

./: .gitignore  .gitmodules  README.md  build.gradle.kts  lumo.properties  settings.gradle.kts
.fleet/: receipt.json
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: ComposeMultiplatformConventionPlugin.kt  KotlinMultiplatformConventionPlugin.kt
build-logic/convention/src/main/kotlin/ai/julie/: KotlinAndroid.kt  KotlinMultiplatform.kt  ProjectExtensions.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/: KoinInitializer.kt  ViewModelModule.kt
composeApp/src/androidMain/kotlin/ai/julie/: JulieApp.kt  MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/: KoinInitializer.kt
composeApp/src/commonMain/kotlin/ai/julie/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/ai/julie/di/: appModule.kt
composeApp/src/commonMain/kotlin/ai/julie/navigation/: JulieNavGraph.kt
composeApp/src/desktopMain/kotlin/ai/julie/: Platform.jvm.kt  main.kt
composeApp/src/iosMain/kotlin/: KoinInitializer.kt
composeApp/src/iosMain/kotlin/ai/julie/: MainViewController.kt  Platform.ios.kt
composeApp/src/wasmJsMain/kotlin/: ViewModelModule.kt
composeApp/src/wasmJsMain/kotlin/ai/julie/: Platform.wasmJs.kt  main.kt
composeApp/src/wasmJsMain/resources/: index.html
core/common/: build.gradle.kts
core/common/src/commonMain/composeResources/values/: strings.xml
core/common/src/commonMain/composeResources/values-ar/: strings.xml
core/common/src/commonMain/composeResources/values-vi/: strings.xml
core/data/: build.gradle.kts
core/data/src/commonMain/kotlin/ai/julie/core/data/: OpenAiRepository.kt  OpenAiRepositoryImpl.kt
core/data/src/commonMain/kotlin/ai/julie/core/data/di/: dataModule.kt
core/data/src/commonMain/kotlin/ai/julie/core/data/llama/: LlamaRepository.kt  LlamaRepositoryImpl.kt
core/data/src/commonMain/kotlin/ai/julie/core/data/thread/: ThreadRepository.kt  ThreadRepositoryImpl.kt
core/designsystem/: build.gradle.kts
core/domain/: build.gradle.kts
core/domain/src/commonMain/kotlin/ai/julie/core/domain/: CreateChatCompletionStreamUseCase.kt  CreateChatCompletionUseCase.kt  InitLocalModelUseCase.kt  PromptLocalModelUseCase.kt
core/fs/: build.gradle.kts
core/fs/src/androidMain/kotlin/ai/julie/core/fs/: FileSystem.android.kt
core/fs/src/commonMain/kotlin/ai/julie/core/fs/: FileSystem.kt
core/fs/src/commonMain/kotlin/ai/julie/core/fs/di/: fsModule.kt  (+1 more)
core/llamabinding/: build.gradle.kts
core/llamabinding/llamacpp/: CMakeLists.txt  build.gradle.kts
core/llamabinding/llamacpp/src/main/cpp/: llama_jni.cpp  llama_jni_common.cpp
core/llamabinding/src/androidMain/kotlin/ai/julie/llamabinding/: LlamaBinding.kt  LlamaPlatform.kt  PlatformUtilActions.actual.kt
core/llamabinding/src/commonMain/kotlin/ai/julie/llamabinding/: LlamaBinding.kt  LlamaPlatform.kt  NativeMethods.kt  PlatformUtilActions.kt
core/llamabinding/src/commonMain/kotlin/ai/julie/llamabinding/model/: LlamaContextParams.kt  LlamaModelParams.kt
core/llamabinding/src/desktopMain/kotlin/ai/julie/llamabinding/: LlamaBinding.kt  LlamaPlatform.kt  PlatformUtilActions.actual.kt
core/logging/: build.gradle.kts
core/logging/src/commonMain/kotlin/ai/julie/logging/: Logger.kt
core/logging/src/commonMain/kotlin/ai/julie/logging/di/: loggingModule.kt
core/model/: build.gradle.kts
core/model/src/commonMain/kotlin/ai/julie/core/model/: ModelContextParams.kt  ModelLoadParams.kt
core/nativelib/: CMakeLists.txt  build.gradle.kts
core/nativelib/src/nativeMain/cpp/: lib.cpp  nativelib_core.cpp  nativelib_core.h
core/network/: build.gradle.kts
core/network/src/commonMain/kotlin/ai/julie/core/network/: HttpClientProvider.kt  HttpConfig.kt
core/storage/: build.gradle.kts
core/storage/src/androidMain/kotlin/ai/julie/storage/: AndroidDatabaseDriverFactory.kt  DatabaseDriverFactoryProvider.kt
core/storage/src/commonMain/kotlin/ai/julie/storage/: Database.kt  DatabaseDriverFactory.kt  DatabaseDriverFactoryProvider.kt  JulieDatabase.kt  MessageOperations.kt  ThreadOperations.kt
core/storage/src/commonMain/kotlin/ai/julie/storage/di/: storageModule.kt
core/storage/src/commonMain/kotlin/ai/julie/storage/entity/: Entity.kt
core/storage/src/commonMain/kotlin/ai/julie/storage/kotbase/: JulieDatabaseImpl.kt  MessageOperationsImpl.kt  ThreadOperationsImpl.kt
core/storage/src/desktopMain/kotlin/ai/julie/storage/: DatabaseDriverFactoryProvider.kt  DesktopDatabaseDriverFactory.kt
core/storage/src/iosMain/kotlin/ai/julie/storage/: DatabaseDriverFactoryProvider.kt  IOSDatabaseDriverFactory.kt
feature/chat/: build.gradle.kts
feature/chat/src/androidMain/kotlin/ai/julie/feature/chat/: NativeLibWrapper.kt
feature/chat/src/commonMain/kotlin/ai/julie/feature/chat/: ChatInputSection.kt  ChatMessageList.kt  ChatModel.kt  ChatScreen.kt  ChatViewModel.kt  NativeLibWrapper.kt  NewChatButton.kt
feature/chat/src/desktopMain/kotlin/ai/julie/feature/chat/: NativeLibWrapper.kt
feature/model-management/: build.gradle.kts
feature/modelconfig/: build.gradle.kts
feature/modelmanagement/: build.gradle.kts
feature/modelmarket/: build.gradle.kts
feature/modelmarket/src/androidMain/kotlin/ai/julie/feature/modelmarket/: ModelDownloadService.kt
feature/thread/: build.gradle.kts
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+129 files in other folders)
